--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Practica - Vanilla</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Sirin+Stencil&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -27,5 +28,25 @@
             </div>
         </div>
     </div>
+    <div class="right-side">
+        <img src="img/img1.jpg" class="backdrop-img">
+        <div class="content">
+            <div class="detail-product">
+                <h1 class="product-name">Yellow Tracksuit</h1>
+                <p class="product-des">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident illum repellat, voluptatibus autem voluptatem natus inventore consectetur aliquam nesciunt nostrum harum ea. Nihil ut enim fuga dicta possimus, quidem debitis!
+                </p>
+                <a href="#" class="buy-btn">buy now</a>
+                <button class="nxt-btn">
+                    <img src="img/arrow.png">
+                </button>
+            </div>
+            <div class="product-img-container">
+                <img src="img/img1.jpg" class="product-img">
+            </div>
+        </div>
+    </div>
+
+    <script src="js/app.js"></script>
 </body>
-</html>
+</html> 
